# Screening_1

./: .gitignore  .pre-commit-config.yaml  BLUEPRINT-Universal-1_1.md  CHANGELOG.md  Concept.txt  DATA_PROVENANCE.md  DECISIONS.md  LITERATURE.bib  Literature.txt  Outline.txt  README.md  REPRODUCIBILITY.md  TRACEABILITY.csv  VALIDATION_REPORT.md  agents.yaml  preregistration.json  proposal.normalized.json  pyproject.toml  tasks.seed.yaml  tasks.yaml  validation-report.md
.blueprint/: README.md  config.yaml  state.json  tools.json
.blueprint/roles/: R1_Orchestrator.md  R2_Architect.md  R3_DomainScientist.md  R4_Implementer.md  R5_Tester.md  R6_Documenter.md  R7_RPM.md
.blueprint/skills/: final_validation.md  generate_specs.md  idea_to_proposal.md  implement_oo_core.md  implement_python_interface.md  implement_tests.md  orchestrator.md  plot_publication_artifacts.md  setup_ci.md  setup_docs.md  setup_package.md  validate_proposal.md
.github/workflows/: ci.yml
docs/: api.rst  conf.py  faq.rst  getting_started.rst  glossary.rst  index.rst
examples/: run_pipeline.py  template_screening_script.py
manuscript/: artifact_manifest.yaml  generate_research_artifacts.py  generation_script.py
scripts/: ingest_mallam_field_data.py  perf_smoke.py  reproduce_all.py
specs/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md
src/resonance_risk_screening/: __init__.py  artifacts.py  cli.py  clustering.py  interfaces.py  io.py  logging_config.py  pipeline.py  preprocessing.py  proxies.py  risk_model.py  user_api.py  validation.py
tests/: conftest.py  test_cli_and_predict.py  test_cli_io.py  test_pipeline_e2e.py  test_proxies.py  test_risk_model.py  test_user_api.py
